<resources>
    <string name="app_name" translatable="false">Easy Videos for Kids</string>

    <!-- Key strings -->
    <string name="key_local_switch" translatable="false">local_switch</string>
    <string name="key_local_browse" translatable="false">local_browse</string>
    <string name="key_local_browse_0" translatable="false">local_browse_0</string>
    <string name="key_local_browse_1" translatable="false">local_browse_1</string>
    <string name="key_local_browse_2" translatable="false">local_browse_2</string>
    <string name="key_dlna_switch" translatable="false">dlna_switch</string>
    <string name="key_dlna_browse" translatable="false">dlna_browse</string>
    <string name="key_dlna_browse_0" translatable="false">dlna_browse_0</string>
    <string name="key_dlna_browse_1" translatable="false">dlna_browse_1</string>
    <string name="key_dlna_browse_2" translatable="false">dlna_browse_2</string>
    <string name="key_visible" translatable="false">_visible</string>
    <string name="key_udn" translatable="false">_udn</string>
    <string name="key_url" translatable="false">_url</string>
    <string name="key_path" translatable="false">_path</string>
    <string name="key_max_age" translatable="false">_max_age</string>
    <string name="key_last_used_dlna" translatable="false">last_used_dlna</string>
    <string name="key_cached" translatable="false">cached</string>
    <string name="key_downloaded" translatable="false">downloaded</string>
    <string name="key_dont_ask" translatable="false">dont_ask</string>
    <string name="key_id" translatable="false">id</string>
    <string name="key_permanent_parent_mode" translatable="false">permanent_parent_mode</string>
    <string name="key_local_pictures" translatable="false">local_pictures</string>

    <!-- Not translatable strings -->
    <string name="default_local_pictures" translatable="false">/sdcard/VideosForKids/</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_local">Local browsing</string>
    <string name="pref_header_dlna">UPnP/DLNA browsing</string>
    <string name="pref_header_memory">Memory usage</string>
    <string name="pref_title_downloaded_thumbnails">Downloaded thumbnails</string>
    <string name="pref_title_cached_thumbnails">Cached thumbnails</string>
    <string name="pref_description_local_pictures">Path to thumbnails directory</string>
    <string name="pref_title_local_pictures">Thumbnails</string>
    <string name="pref_title_local_switch">Local files</string>
    <string name="pref_local_add">Root directory for local files</string>
    <string name="pref_local_add_button">Add a root directory</string>
    <string name="pref_title_dlna_switch">UPnP/DLNA</string>
    <string name="pref_dlna_add">UPnP/DLNA server</string>
    <string name="pref_dlna_add_button">Add a UPnP/DLNA server</string>
    <string name="dlna_progress_dialog_title">Trying to connect to a server</string>
    <string name="image_search_progress_dialog_title">Waiting for results</string>
    <string name="dlna_progress_dialog_files_title">Retrieving files</string>
    <string name="progress_dialog_text">Please wait&#8230;</string>
    <string name="no_wifi_connexion">No WiFi or ethernet connexion detected</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="parent_mode">Parent mode</string>
    <string name="set_image">Search for a thumbnail</string>
    <string name="copy">Copy to local</string>
    <string name="browse_context_menu_title">Select an option</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Do you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_dir_title">Directory must be empty</string>
    <string name="to">to</string>
    <string name="free_space">Free space:</string>
    <string name="bytes">B</string>
    <string name="kilo_bytes">kB</string>
    <string name="mega_bytes">MB</string>
    <string name="giga_bytes">GB</string>
    <string name="rename">Rename file automatically</string>
    <string name="exist_dest_dialog_title">A file with the same name already exists. Do you want to override it?</string>
    <string name="developed_by">Developed by Guillaume B&#233;guin (guillaume.beguin@gmail.com)</string>
    <string name="modules_list">This application uses the following open sources projects:\n</string>
    <string name="action_about">About</string>
    <string name="pref_add_button">Add</string>
    <string name="select_directory">Select a directory:</string>
    <string name="file_description">File</string>
    <string name="directory_description">Directory</string>
    <string name="download_image_description">Downloadable image</string>
    <string name="settings_description">Settings</string>
    <string name="dlna_description">DLNA/UPnP browsing</string>
    <string name="local_description">Local browsing</string>
    <string name="remove_description">Remove</string>
    <string name="thumbnails_to_retrieve">thumbnails to retrieve</string>
    <string name="files_coma">files,</string>
    <string name="clear">Clear</string>
    <string name="first_launch_dialog_title">Need help?</string>
    <string name="first_launch_dialog_message">Do you want help to configure and know how to use this application?</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="action_help">Help</string>
    <string name="configure_local">Configure local directories</string>

    <string name="configure_local_text">
        - Go to "Settings" using start screen\'s top right menu.\n
        - Click on "Local browsing".\n
        - Switch on "Local files".\n
        - Click on "Add a root directory"\n
        - Click on the added line then browse and select a directory.\n
        \n
        You can now browse this directory by clicking on the car on the start screen.\n
        \n
        You can configure up to 3 directories in case you\'d have several storage device and / or video directories.\n
        You can remove a directory by clicking the red cross.
    </string>

    <string name="configure_upnp">Configure a UPnP directory</string>

    <string name="configure_upnp_text">
        - Go to "Settings" using start screen\'s top right menu.\n
        - Click on "UPnP/DLNA browsing".\n
        - Switch on "UPnP/DLNA".\n
        - Click on "Add a UPnP/DLNA server"\n
        - Click on the added line then browse and select a directory.\n
        \n
        You can now browse this directory by clicking on the car on the start screen.\n
        \n
        You can configure up to 3 servers but you can access only one at a time. The application will connect to the first available server.\n
        You can remove a server by clicking the red cross.
    </string>

    <string name="copy_to_local">Copy a file from UPnP server to local directory</string>

    <string name="copy_to_local_text">
        - Go to "Parent mode" using start screen\'s top right menu.\n
        - Browse UPnP files until you reach the one you want to copy.\n
        - Long press the file.\n
        - In the new pop-up select "Copy to local".\n
        - In the new pop_up select the destination then click "Yes".\n
        - The file is downloaded. You\'ll find it in the destination directory with the same path as on the server.
    </string>

    <string name="find_thumbnail">Find a new thumbnail</string>

    <string name="find_thumbnail_text">
        To configure the directory where thumbnails will be saved:
        - Go to "Settings" using start screen\'s top right menu.\n
        - Click on "General".\n
        - Click on "Thumbnails" then browse and select a directory.\n
        \n
        To find and assign a thumbnail to a file or a directory: \n
        - Go to "Parent mode" using start screen\'s top right menu.\n
        - Browse local or UPnP files until you reach the one you want to assign a new thumbnail.\n
        - Long press the file.\n
        - In the new pop-up select "Search for a thumbnail".\n
        - On the new screen click the thumbnail you want to use.
    </string>

    <string name="delete_local">Delete a local file or directory</string>

    <string name="delete_local_text">
        - Go to "Parent mode" using top right menu.\n
        - Browse local files until you reach the one you want to copy.\n
        - Long press the file.\n
        - In the new pop-up select "Delete".\n
        - In the new pop_up click "Yes".\n
        \n
        To delete a directory you have to delete all the contained files first.
    </string>

    <string name="go_parent_mode">Go to parent mode</string>

    <string name="go_parent_mode_text">
        Parent mode is a mode where more actions are possible. It can only be activated from the start screen.
        When turned on, the application title bar will be red. Once turned on the application stays in this state
        until the parent mode is turned off.\n
        \n
        To turn on or off parent mode, click "Parent mode" in the start screen\'s top right menu.
    </string>
    <string name="permanent_parent_mode_title">Permanent parent mode</string>
    <string name="permanent_parent_mode_summary">Always stay in parent mode</string>
    <string name="images_source">Icons made by</string>
    <string name="memory_pref_message">Do you want to delete these files?</string>

</resources>
