<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.freak.videosenfants.app.settings.general.GeneralPreferenceFragment"
        android:icon="@drawable/ic_photo_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.freak.videosenfants.app.settings.local.LocalPreferenceFragment"
        android:icon="@drawable/ic_sd_storage_24dp"
        android:title="@string/pref_header_local" />

    <header
        android:fragment="com.freak.videosenfants.app.settings.dlna.DlnaPreferenceFragment"
        android:icon="@drawable/ic_cast_connected_24dp"
        android:title="@string/pref_header_dlna" />

    <header
        android:fragment="com.freak.videosenfants.app.settings.memory.MemoryPreferenceFragment"
        android:icon="@drawable/ic_memory_24dp"
        android:title="@string/pref_header_memory" />

</preference-headers>
