<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.freak.videosenfants.activities.FaqActivity"
    tools:showIn="@layout/activity_faq">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/configure_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/configure_local"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/configure_upnp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/configure_upnp"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/copy_to_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/copy_to_local"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/find_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/find_thumbnail"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/delete_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/delete_local"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/parent_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAlignment="textStart"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/go_parent_mode"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</ScrollView>
